<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_setting_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btReset" />

    <TextView
        android:id="@+id/tvSortTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_sort_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingTitle" />

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/rbNearDate"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSortTitle">

        <RadioButton
            android:id="@+id/rbNearDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_near_date"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbFarDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_far_date"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvFinishedTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_finished_task_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSort" />

    <RadioGroup
        android:id="@+id/rgFinishedTaskSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/rbHideTask"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFinishedTaskTitle">

        <RadioButton
            android:id="@+id/rbShowTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_show_task"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbHideTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/rb_hide_task"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTaskGroupDisplayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_task_group_display_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgFinishedTaskSetting" />

    <CheckBox
        android:id="@+id/cbImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/important"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskGroupDisplayTitle" />

    <CheckBox
        android:id="@+id/cbEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/emergency"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbImportant"
        app:layout_constraintStart_toEndOf="@+id/cbImportant" />

    <CheckBox
        android:id="@+id/cbNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/note"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbImportant"
        app:layout_constraintStart_toEndOf="@+id/cbEmergency" />

    <CheckBox
        android:id="@+id/cbNotSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/not_set"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbImportant"
        app:layout_constraintStart_toEndOf="@+id/cbNote" />

    <Button
        android:id="@+id/btReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bt_reset"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_save"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btReset" />

</androidx.constraintlayout.widget.ConstraintLayout>